--- a/detect.ipynb
+++ b/detect.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import network as netfn\n",
@@ -38,68 +29,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PTZ-WILDTYPE-03_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-03_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-03_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-04_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-04_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-04_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-05_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-05_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-05_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-06_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-06_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-06_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-07_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-07_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-07_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-08_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-08_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-08_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-09_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-09_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-09_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-10_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-10_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-10_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-11_2photon_sess-01-6dpf_BLN_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-11_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-11_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-12_2photon_sess-01-6dpf_BLN_run-09_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-12_2photon_sess-01-6dpf_PTZ05_run-01_realtrace.npy',\n",
+       " 'PTZ-WILDTYPE-12_2photon_sess-01-6dpf_PTZ20_run-01_realtrace.npy']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "preprocess:\n",
-    "zscore for PCA plot\n",
-    "\n",
-    "other dim reductions:\n",
-    "nnmf\n",
-    "svd (map and trajectory)\n",
-    "laplacian\n",
-    "\n",
-    "correlation:\n",
-    "Correlation values between each cell at each time point\n",
-    "Run PCA ON THIS - how does correlation effected by PTZ \n",
-    "\n",
-    "centre of mass:\n",
-    "find centre of mass as mean of time frames in window - any divergences from this centre of mass - baseline = slowly evolving, ptz = fast shifts - catch these fast shifting events\n",
-    "\n",
-    "multimodal approach:\n",
-    "colour by amplitude - does this large shift be explained by amplitude of event in each time frame\n",
-    "or \n",
-    "make first 2 dims PCs, 3rd dim amplitude - does the amplitude shift explain these movemenet in state space\n",
-    "\n",
-    "cells:\n",
-    "identify cells involved in divergence in state space - see what these cells are doing\n",
-    "\n",
-    "time window:\n",
-    "pre-seizure timecourse - look at lead up to seizure events for one fish - find componenets that might change in the lead up - are there cell populations that activate before seizure - are they the same across seizures?\n",
-    "pca on tmieseries leading up to seizure event - identify pre-seizure time periods and do pca\n",
-    "\n",
-    "loop:\n",
-    "seizure events loop into same space - which cells contribute to this loop\n",
-    "\n",
-    "plot: \n",
-    "plot with same colour coding for amplitude\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Support vector machines - \n",
-    "1. Delta f/f - normalise data before classsifying\n",
-    "—-i.e. removed baseline at each time point in pixels \n",
-    "—better to be done on filtered data\n",
-    "\n",
-    "2. Pool data across multiple fish - register to standard brain\n",
-    "\n",
-    "3. Spatial scale features - break down pixels into spaitaially integrating units - or cells\n",
-    "—-downsampling\n",
-    "\n",
-    "4. Temporal scale features - downsample time as well?\n",
-    "Across dataset normalisation \n",
-    "\n",
-    "Correlation\n",
-    "Train ROis over time \n",
-    "Integrate correlative features into dff data "
+    "# Choose path and create lists of coord and trace files\n",
+    "#---------------------------------------------------------------------------\n",
+    "experiment = 'PTZ-WILDTYPE'\n",
+    "os.chdir(Fdrop + 'Project/' + experiment)\n",
+    "itbinlist = sorted(glob.glob('*cutbinarised*')) #iterated list - binarised trace\n",
+    "realcoordlist = sorted(glob.glob('*02**realcoord.npy'))  \n",
+    "realtracelist = sorted(glob.glob('*realtrace.npy'))\n",
+    "dfflist = sorted(glob.glob('*02*BLN*_deltaff.npy'))\n",
+    "nnblist = sorted(glob.glob('*.*nnb.npy'))\n",
+    "realtracelist = realtracelist[3:]\n",
+    "realtracelist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,10 +110,18 @@
    "outputs": [],
    "source": [
     "#TEMPLATE\n",
-    "\n",
     "fig, ax = plt.subplots(figsize= (18,18))\n",
     "dotplot = plt.scatter(pca.components_[2,:], pca.components_[1,:], c = np.linspace(0,1, pca.components_.shape[1]), alpha = 1, cmap = 'Spectral')\n",
     "fig.colorbar(dotplot, ax = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blnlist[0]"
    ]
   },
   {
