--- a/avfig3.ipynb
+++ b/avfig3.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -26,7 +34,7 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "import avalanches as crfn\n",
-    "#import kuramoto as kmox\n",
+    "import admin_functions as adfn\n",
     "import plot as pltfn\n",
     "from kuramoto1 import Kuramoto\n",
     "from scipy import stats \n",
@@ -44,6 +52,27 @@
     "F10t = '/Volumes/Dominic 10tb/'\n",
     "Ffig = '/Users/dominicburrows/Dropbox/PhD/figures/'\n",
     "Ftm = '/Volumes/Dominic Time Machine/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PDF - SIZE\n",
+    "#------------\n",
+    "f, axarr = plt.subplots(figsize = (15,15))\n",
+    "for i in range(len(avlist)):\n",
+    "    avdistcut = np.load(avlist[i])[0]\n",
+    "    mini = np.min(avdistcut)\n",
+    "    maxi = np.max(avdistcut)\n",
+    "    binned=np.logspace(np.log10(mini),np.log10(maxi), 30)\n",
+    "    hist = np.histogram(avdistcut, bins = binned)\n",
+    "    xaxis = np.log10(hist[1][:-1])\n",
+    "    yaxis = np.log10(hist[0]/np.sum(hist[0]))\n",
+    "    plt.plot(xaxis[:len(xaxis)-1], yaxis[:len(xaxis)-1], 'o-', linewidth = 1, markersize = 2, label = str(i + 2) + '  ' + str(np.load(coordlist[i]).shape[0]))\n",
+    "    axarr.legend(loc = 1, markerscale = 2,prop={'size': 15})"
    ]
   },
   {
@@ -868,5 +897,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
