--- a/Misc2.ipynb
+++ b/Misc2.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -34,15 +42,11 @@
     "import glob\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
-    "import avalanches as crfn\n",
-    "import admin_functions as adfn\n",
     "import plot as pltfn\n",
-    "from kuramoto1 import Kuramoto\n",
-    "from scipy import stats \n",
-    "\n",
-    "sns.reset_orig()\n",
+    "from sklearn.cluster import KMeans\n",
+    "import admin_functions as adfn\n",
     "#plt.style.use('dark_background')\n",
-    "\n",
+    "sns.reset_orig()\n",
     "%load_ext autoreload\n",
     "%autoreload\n",
     "\n",
@@ -53,6 +57,63 @@
     "F10t = '/Volumes/Dominic 10tb/'\n",
     "Ffig = '/Users/dominicburrows/Dropbox/PhD/figures/'\n",
     "Ftm = '/Volumes/Dominic Time Machine/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PTZ-WILDTYPE-12_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create lists of trace data\n",
+    "#---------------------------------------------------------------------------\n",
+    "experiment = 'PTZ-WILDTYPE'\n",
+    "os.chdir(Fdrop + 'Project/' + experiment)\n",
+    "b_coordlist = sorted(glob.glob('*BLN*realcoord.npy'))\n",
+    "p_coordlist = sorted(glob.glob('*PTZ20*realcoord.npy'))\n",
+    "b_tracelist = sorted(glob.glob('*BLN*_cutrealtrace.npy'))[10:]\n",
+    "p_tracelist = sorted(glob.glob('*PTZ20*_cutrealtrace.npy'))[10:]\n",
+    "p_tracelist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done fish #0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculate correlation between cells - ENTIRE RECORDING\n",
+    "blnpcv, p20pcv = list(range(len(b_tracelist))),list(range(len(p_tracelist)))\n",
+    "for e in range(len(b_tracelist)):\n",
+    "    b_trace, p_trace = np.load(b_tracelist[e]), np.load(p_tracelist[e])\n",
+    "    b_mat, p_mat = np.zeros((b_trace.shape[0], b_trace.shape[0])), np.zeros((p_trace.shape[0], p_trace.shape[0]))\n",
+    "    tracelist, matlist = [b_trace,p_trace], [b_mat,p_mat]\n",
+    "    for t in range(len(tracelist)):\n",
+    "        for f in range(tracelist[t].shape[0]):\n",
+    "            for x in range(tracelist[t].shape[0]):\n",
+    "                matlist[t][f,x] =  np.corrcoef(tracelist[t][f,:],tracelist[t][x,:])[0][1]\n",
+    "    np.save(Fdrop + 'Project/' + experiment + os.sep + adfn.save_name(e, b_tracelist) + '_' + 'corr.npy', b_mat)\n",
+    "    np.save(Fdrop + 'Project/' + experiment + os.sep + adfn.save_name(e, p_tracelist) + '_' + 'corr.npy', p_mat)\n",
+    "    print('Done fish #' + str(e))"
    ]
   },
   {
