--- a/Misc1.ipynb
+++ b/Misc1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -48,27 +56,55 @@
     "Fmac = '/Users/dominicburrows/Documents/'\n",
     "F10t = '/Volumes/Dominic 10tb/'\n",
     "Ffig = '/Users/dominicburrows/Dropbox/PhD/figures/'\n",
-    "Ftm = '/Volumes/Dominic Time Machine/'"
+    "Ftm = '/Volumes/Dominic Time Machine/'\n",
+    "experiment = 'PTZ-WILDTYPE'\n",
+    "savepath = Fdrop + 'Project/' + experiment + os.sep "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['PTZ-WILDTYPE-06_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy',\n",
-       " 'PTZ-WILDTYPE-07_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy',\n",
-       " 'PTZ-WILDTYPE-08_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy',\n",
-       " 'PTZ-WILDTYPE-09_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy',\n",
-       " 'PTZ-WILDTYPE-10_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy',\n",
-       " 'PTZ-WILDTYPE-11_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy',\n",
-       " 'PTZ-WILDTYPE-12_2photon_sess-01-6dpf_PTZ20_run-01_cutrealtrace.npy']"
+       "['PTZ-WILDTYPE-02_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-02_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-02_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-03_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-03_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-03_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-04_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-04_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-04_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-05_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-05_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-05_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-06_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-06_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-06_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-07_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-07_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-07_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-08_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-08_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-08_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-09_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-09_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-09_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-10_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-10_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-10_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-11_2photon_sess-01-6dpf_BLN_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-11_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-11_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-12_2photon_sess-01-6dpf_BLN_run-09_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-12_2photon_sess-01-6dpf_PTZ05_run-01_realcoord.npy',\n",
+       " 'PTZ-WILDTYPE-12_2photon_sess-01-6dpf_PTZ20_run-01_realcoord.npy']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,16 +114,15 @@
     "#---------------------------------------------------------------------------\n",
     "experiment = 'PTZ-WILDTYPE'\n",
     "os.chdir(Fdrop + 'Project/' + experiment)\n",
-    "b_coordlist = sorted(glob.glob('*BLN*realcoord.npy'))\n",
-    "p_coordlist = sorted(glob.glob('*PTZ20*realcoord.npy'))\n",
-    "b_tracelist = sorted(glob.glob('*BLN*_cutrealtrace.npy'))[4:]\n",
-    "p_tracelist = sorted(glob.glob('*PTZ20*_cutrealtrace.npy'))[4:]\n",
-    "p_tracelist"
+    "tracelist = sorted(glob.glob('*BLN*cut*realtrace*')) \n",
+    "coordlist = sorted(glob.glob('*realcoord*')) \n",
+    "distlist = sorted(glob.glob('*BLN*dist*')) \n",
+    "coordlist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -97,23 +132,48 @@
       "Done fish #0\n",
       "Done fish #1\n",
       "Done fish #2\n",
-      "Done fish #3\n"
+      "Done fish #3\n",
+      "Done fish #4\n",
+      "Done fish #5\n",
+      "Done fish #6\n",
+      "Done fish #7\n",
+      "Done fish #8\n",
+      "Done fish #9\n",
+      "Done fish #10\n",
+      "Done fish #11\n",
+      "Done fish #12\n",
+      "Done fish #13\n",
+      "Done fish #14\n",
+      "Done fish #15\n",
+      "Done fish #16\n",
+      "Done fish #17\n",
+      "Done fish #18\n",
+      "Done fish #19\n",
+      "Done fish #20\n",
+      "Done fish #21\n",
+      "Done fish #22\n",
+      "Done fish #23\n",
+      "Done fish #24\n",
+      "Done fish #25\n",
+      "Done fish #26\n",
+      "Done fish #27\n",
+      "Done fish #28\n",
+      "Done fish #29\n",
+      "Done fish #30\n",
+      "Done fish #31\n",
+      "Done fish #32\n"
      ]
     }
    ],
    "source": [
-    "#Calculate correlation between cells - ENTIRE RECORDING\n",
-    "blnpcv, p20pcv = list(range(len(b_tracelist))),list(range(len(p_tracelist)))\n",
-    "for e in range(len(b_tracelist)):\n",
-    "    b_trace, p_trace = np.load(b_tracelist[e]), np.load(p_tracelist[e])\n",
-    "    b_mat, p_mat = np.zeros((b_trace.shape[0], b_trace.shape[0])), np.zeros((p_trace.shape[0], p_trace.shape[0]))\n",
-    "    tracelist, matlist = [b_trace,p_trace], [b_mat,p_mat]\n",
-    "    for t in range(len(tracelist)):\n",
-    "        for f in range(tracelist[t].shape[0]):\n",
-    "            for x in range(tracelist[t].shape[0]):\n",
-    "                matlist[t][f,x] =  np.corrcoef(tracelist[t][f,:],tracelist[t][x,:])[0][1]\n",
-    "    np.save(Fdrop + 'Project/' + experiment + os.sep + adfn.save_name(e, b_tracelist) + '_' + 'corr.npy', b_mat)\n",
-    "    np.save(Fdrop + 'Project/' + experiment + os.sep + adfn.save_name(e, p_tracelist) + '_' + 'corr.npy', p_mat)\n",
+    "#Calculate euclidean distance\n",
+    "for e in range(len(coordlist)):\n",
+    "    coord = np.load(coordlist[e])\n",
+    "    mat = np.zeros((coord.shape[0], coord.shape[0]))\n",
+    "    for f in range(coord.shape[0]):\n",
+    "        for x in range(coord.shape[0]):\n",
+    "            mat[f,x] =  np.linalg.norm(coord[f] - coord[x])\n",
+    "    np.save(Fdrop + 'Project/' + experiment + os.sep + adfn.save_name(e, coordlist) + '_' + 'dist.npy', mat)\n",
     "    print('Done fish #' + str(e))"
    ]
   },
